--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
-
-
+body {
+    background-image: url("./background.png");
+}
 
 .jumbotron-fluid {
     position: absolute;
     top: 50%;
     left:50%;
     transform: translate(-50%,-50%);
-    /*border: 1px dashed deeppink;*/
+    border: 1px solid black;
+    border-radius: 25px;
+    background-color: white;
+
 }
 
 .key {
