--- a/style.css
+++ b/style.css
@@ -2,14 +2,16 @@ body {
     background-image: url("./background.png");
 }
 
-.jumbotron-fluid {
+#keysContainer {
     position: absolute;
     top: 50%;
     left:50%;
     transform: translate(-50%,-50%);
     border: 1px solid black;
-    border-radius: 25px;
+    margin-bottom: 25px;
+    /*border-radius: 25px;*/
     background-color: white;
+
 
 }
 
@@ -20,8 +22,9 @@ body {
     height: 50px;
     text-align: center;
     padding: 5px;
-    margin-left: 15;
-    margin-right: 15;
+    margin-left: 25px;
+    margin-right: 25px;
+    border: 1px solid black;
 }
 
 .key:active {
